--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div class="uk-container uk-container-expand">
   <app-navigation></app-navigation>
+  <app-categories>categories works!</app-categories>
+
 </div>
