--- a/src/app/features/categories/categories.component.html
+++ b/src/app/features/categories/categories.component.html
@@ -4,8 +4,8 @@
                       [categoryName]="category.name"
                       (removeEvent)="removeCategory(category)"
     >  </app-category-box>
-        <input [(ngModel)]="newCategoryName" type="text" class="uk-input" placeholder="Nazwa Kategorii">
-    <button class="uk-button uk-border-pill uk-margin" (click)="addCategory()">
+        <input [(ngModel)]="newCategoryName"(keyup.enter)="addCategory()"  type="text" class="uk-input" placeholder="Nazwa Kategorii">
+    <button class="uk-button uk-border-pill uk-margin"  (click)="addCategory()">
       <fa-icon [icon]="faPlus"></fa-icon>
     </button>
   </div>
