--- a/src/app/features/cards/cards.component.html
+++ b/src/app/features/cards/cards.component.html
@@ -19,13 +19,14 @@
     <div class="uk-grid-small" uk-grid>
       <div class="uk-width-1-2">
         <input
-          [(ngModel)]="translation"
+          [(ngModel)]="word"
           type="text"
           class="uk-input"
           placeholder="Słówko"/>
       </div>
       <div class="uk-width-1-2">
         <input
+          [(ngModel)]="translation"
           type="text"
           class="uk-input"
           placeholder="Tłumaczenie" />
